--- a/style.css
+++ b/style.css
@@ -1,13 +1,32 @@
+*{
+    font-family: 'Roboto' , sans-serif;
+}
+
 body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-
+.navbar , .dropdown-menu{
+    background-color: #03303c;
+}
 .nav-display {
     display: flex;
     justify-content: space-between;
+}
+#navbarNav ul li a{
+    color: antiquewhite;
+    font-size: 20px;
+}
+.nav-link:hover {
+ background-color: #044a5e;
+ border-radius: 9px ;
+}
+
+.dropdown-item:hover{
+    background-color: #044a5e;
+
 }
 
 .first-block {
@@ -23,10 +42,11 @@ body {
 
 .heading1 {
     margin-top: 30px;
-    font-size: 75px;
 
 }
-
+.first-block h2 span{
+    color: #700909;
+}
 .p1 {
     line-height: 25px;
     font-size: 20px;
@@ -85,7 +105,7 @@ body {
 
 .center {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -179,32 +199,55 @@ body {
     margin-bottom: 70px;
 }
 
-.bg-black {
-    background-color: rgba(0, 0, 0, 0.733);
-}
-
 .text-c {
     text-align: center;
+   
+}
+footer ul li{
+    list-style: none;
+    
 }
 
-.padding-tblr {
-    padding: 4px 10px;
-}
 
-.bg-grey {
-    background-color: gray
-}
+ footer{
+    background-color:#03303c ;
+ }
 
-.gap-c{gap:8px;
-justify-content: space-around;}
+#items{
+    
+    flex-direction: column;
+    top: 50px;
+    align-items: center;
+    line-height: 30px;
+    justify-content: flex-start;
+    display: flex;
+    position: relative;
+   
+}
+#items h5 {
+    color: black;
+    font-size: 25px;
+    font-weight: 600;
+    font-family: ui-rounded;
+
+}
+#items ul li a {
+    
+    text-decoration: none;
+}
+ 
+#footer2{
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    padding-top: 80px;
+}
 
 .style-n{text-decoration:none;}
 
 .sec-4 {
-    background-color: rgba(60, 69, 58, 0.804);
+    background-color: rgb(6 29 62 / 80%);
 }
-
-
 /* INCOMPLETE RESPONSIVE SECTION  */
 
 @media screen and (max-width: 900px) {
