--- a/TEMPorSCRATCH/template/template.html
+++ b/TEMPorSCRATCH/template/template.html
@@ -15,36 +15,58 @@
     <link rel="icon" href="../../images/logo.png" />
   </head>
   <body>
-    <h1>Templates</h1>
-    <div class="card" style="width: 18rem">
-      <img class="card-img-top" src="../../images/logo.png" alt="pic" />
-      <a href="#" class="btn btn-primary">Demo</a>
-      <a href="#" class="btn btn-primary">Apply</a>
-    </div>
-    <div class="card" style="width: 18rem">
-      <img class="card-img-top" src="../../images/logo.png" alt="pic" />
-      <a href="#" class="btn btn-primary">Demo</a>
-      <a href="#" class="btn btn-primary">Apply</a>
-    </div>
-    <div class="card" style="width: 18rem">
-      <img class="card-img-top" src="../../images/logo.png" alt="pic" />
-      <a href="#" class="btn btn-primary">Demo</a>
-      <a href="#" class="btn btn-primary">Apply</a>
-    </div>
-    <div class="card" style="width: 18rem">
-      <img class="card-img-top" src="../../images/logo.png" alt="pic" />
-      <a href="#" class="btn btn-primary">Demo</a>
-      <a href="#" class="btn btn-primary">Apply</a>
-    </div>
-    <div class="card" style="width: 18rem">
-      <img class="card-img-top" src="../../images/logo.png" alt="pic" />
-      <a href="#" class="btn btn-primary">Demo</a>
-      <a href="#" class="btn btn-primary">Apply</a>
-    </div>
-    <div class="card" style="width: 18rem">
-      <img class="card-img-top" src="../../images/logo.png" alt="pic" />
-      <a href="#" class="btn btn-primary">Demo</a>
-      <a href="#" class="btn btn-primary">Apply</a>
+    
+    <h1 class="heading">Design your own Template</h1>
+    <p class="para">------->quick ,easy ,effective or creativ e templates provided by <b>DDPYR</b></p>
+
+    <div class="container">
+      <div class="card" style="width: 18rem">
+        <img class="card-img-top" src="../../images/logo.png" alt="pic" />
+        <div class="button">
+          <a href="./template_1/template_1.html" class="btn btn-primary">Demo</a>
+          <a href="./template_1/template_1.html" class="btn btn-primary">Apply</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem">
+        <img class="card-img-top" src="../../images/logo.png" alt="pic" />
+        <div class="button">
+          <a href="./template_2/template_2.html" class="btn btn-primary">Demo</a>
+          <a href="./template_2/template_2.html" class="btn btn-primary">Apply</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem">
+        <img class="card-img-top" src="../../images/logo.png" alt="pic" />
+        <div class="button">
+          <a href="./template_3/template_3.html" class="btn btn-primary">Demo</a>
+          <a href="./template_3/template_3.html" class="btn btn-primary">Apply</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem">
+        <img class="card-img-top" src="../../images/logo.png" alt="pic" />
+        <div class="button">
+          <a href="./template_4/template_4.html" class="btn btn-primary">Demo</a>
+          <a href="./template_4/template_4.html" class="btn btn-primary">Apply</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem">
+        <img class="card-img-top" src="../../images/logo.png" alt="pic" />
+        <div class="button">
+          <a href="./template_5/template_5.html" class="btn btn-primary">Demo</a>
+          <a href="./template_5/template_5.html" class="btn btn-primary">Apply</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem">
+        <img class="card-img-top" src="../../images/logo.png" alt="pic" />
+        <div class="button">
+          <a href="./template_6/template_6.html" class="btn btn-primary">Demo</a>
+          <a href="./template_6/template_6.html" class="btn btn-primary">Apply</a>
+        </div>
+      </div>
+     
+      
+      
+     
+      
     </div>
   </body>
 </html>
