--- a/TEMPorSCRATCH/template/template.css
+++ b/TEMPorSCRATCH/template/template.css
@@ -1,5 +1,40 @@
-*{
-    margin: 0;
-    padding: 0 ;
-    box-sizing: border-box;
+body{
+    display: flex;
+   flex-direction: column;
+}
+.container{
+    display: flex;
+    flex-wrap: wrap;
+}
+.card{
+    margin: 5px;
+}
+.button {
+   
+    border: 2px solid bisque;
+    border-radius: 10%;
+
+}
+a.btn-primary:hover
+    {
+        background-color: rgb(9, 219, 20);
+        
+    }
+
+    .heading{
+        font-weight: bolder;
+        text-shadow: 1px 1px 2px crimson;
+       font-style: italic;
+       font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+       font-size:90px;
+           font-weight: 900;
+       }
+
+       .para
+{text-transform: capitalize;
+    text-align: right;
+    color: darkcyan;
+    font-style: italic;
+    font:large;
+    
 }
