Add Images in template

--- a/TEMPorSCRATCH/template/template.html
+++ b/TEMPorSCRATCH/template/template.html
@@ -21,42 +21,42 @@
 
     <div class="container">
       <div class="card" style="width: 18rem">
-        <img class="card-img-top" src="../../images/logo.png" alt="pic" />
+        <img class="card-img-top" src="../../images/template_1.png" alt="pic" />
         <div class="button">
           <a href="./template_1/template_1.html" class="btn btn-primary">Demo</a>
           <a href="./template_1/template_1.html" class="btn btn-primary">Apply</a>
         </div>
       </div>
       <div class="card" style="width: 18rem">
-        <img class="card-img-top" src="../../images/logo.png" alt="pic" />
+        <img class="card-img-top" src="../../images/template_2.png" alt="pic" />
         <div class="button">
           <a href="./template_2/template_2.html" class="btn btn-primary">Demo</a>
           <a href="./template_2/template_2.html" class="btn btn-primary">Apply</a>
         </div>
       </div>
       <div class="card" style="width: 18rem">
-        <img class="card-img-top" src="../../images/logo.png" alt="pic" />
+        <img class="card-img-top" src="../../images/template_3.png" alt="pic" />
         <div class="button">
           <a href="./template_3/template_3.html" class="btn btn-primary">Demo</a>
           <a href="./template_3/template_3.html" class="btn btn-primary">Apply</a>
         </div>
       </div>
       <div class="card" style="width: 18rem">
-        <img class="card-img-top" src="../../images/logo.png" alt="pic" />
+        <img class="card-img-top" src="../../images/template_4.png" alt="pic" />
         <div class="button">
           <a href="./template_4/template_4.html" class="btn btn-primary">Demo</a>
           <a href="./template_4/template_4.html" class="btn btn-primary">Apply</a>
         </div>
       </div>
       <div class="card" style="width: 18rem">
-        <img class="card-img-top" src="../../images/logo.png" alt="pic" />
+        <img class="card-img-top" src="../../images/template_5.png" alt="pic" />
         <div class="button">
           <a href="./template_5/template_5.html" class="btn btn-primary">Demo</a>
           <a href="./template_5/template_5.html" class="btn btn-primary">Apply</a>
         </div>
       </div>
       <div class="card" style="width: 18rem">
-        <img class="card-img-top" src="../../images/logo.png" alt="pic" />
+        <img class="card-img-top" src="../../images/template_6.png" alt="pic" />
         <div class="button">
           <a href="./template_6/template_6.html" class="btn btn-primary">Demo</a>
           <a href="./template_6/template_6.html" class="btn btn-primary">Apply</a>
